// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum ApigeeBetaEnvironmentStateEnum {
  ApigeeBetaEnvironmentStateEnumNO_VALUE_DO_NOT_USE = 0;
  ApigeeBetaEnvironmentStateEnumSTATE_UNSPECIFIED = 1;
  ApigeeBetaEnvironmentStateEnumCREATING = 2;
  ApigeeBetaEnvironmentStateEnumACTIVE = 3;
  ApigeeBetaEnvironmentStateEnumDELETING = 4;
}

message ApigeeBetaEnvironment {
  string name = 1;
  string description = 2;
  int64 created_at = 3;
  int64 last_modified_at = 4;
  map<string, string> properties = 5;
  string display_name = 6;
  ApigeeBetaEnvironmentStateEnum state = 7;
  string apigee_organization = 8;
}

message ApplyApigeeBetaEnvironmentRequest {
  ApigeeBetaEnvironment resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteApigeeBetaEnvironmentRequest {
  string service_account_file = 1;
  ApigeeBetaEnvironment resource = 2;
}

message ListApigeeBetaEnvironmentRequest {
  string service_account_file = 1;
  string ApigeeOrganization = 2;
}

message ListApigeeBetaEnvironmentResponse {
  repeated ApigeeBetaEnvironment items = 1;
}

service ApigeeBetaEnvironmentService {
  rpc ApplyApigeeBetaEnvironment(ApplyApigeeBetaEnvironmentRequest) returns (ApigeeBetaEnvironment);
  rpc DeleteApigeeBetaEnvironment(DeleteApigeeBetaEnvironmentRequest) returns (google.protobuf.Empty);
  rpc ListApigeeBetaEnvironment(ListApigeeBetaEnvironmentRequest) returns (ListApigeeBetaEnvironmentResponse);
}
